--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,8 +1,10 @@
 $main: #0d2d6c;
 $secondary: #68cef2;
-$clickable: #b7006a;
+$clickable: #f2840c;
 $highlight: #cbdb2f;
 $highlight-bg: #eff4c1;
 $gray: #84898c;
 $lgray: #cecece;
-$text: #343741;
+$text: #104477;
+$dblue: #104477;
+$lblue: #5bbcb7;
