--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -3,15 +3,17 @@ body {
   font-family: 'Open Sans', Helvetica, Roboto, Arial, sans-serif;
   color: $text;
   margin: 0;
-  padding: 0;
+  padding: 100px;
 }
 
 h1 {
-
+  font-size: 62px;
+  color: $lblue;
+  text-align: center;
 }
 
 h2 {
-
+  color: $dblue;
 }
 
 p {
